--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/firestore": "^7.11.0",
     "@hapi/hapi": "^21.3.12",
-    "@hapi/joi": "^17.1.1",
-    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "firebase-admin": "^13.0.1"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.0",
+    "@tensorflow/tfjs-node": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
