--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/server/server.js",
     "start-prod": "NODE_ENV=production node ./src/server/server.js",
     "start-dev": "nodemon ./src/server/server.js"
   },
@@ -13,11 +14,11 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
     "@hapi/hapi": "^21.3.12",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.0",
-    "@tensorflow/tfjs-node": "^3.10.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
