still fixing the handlerFood

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PORT = 8080
 MODEL_URL='https://storage.googleapis.com/nutrisense/disease/model.json'
 JWT_SECRET='rahasia'
 NODE_ENV='development'
+
+PREDICT_URL = 'http://35.206.125.126:5000/detect'
