--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/firestore": "^7.11.0",
     "@hapi/hapi": "^21.3.12",
     "@tensorflow/tfjs-node": "^4.22.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
